--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,18 @@ services:
     ports:
       - "80:80"
       - "443:443"
-
-  dbserver:
+ 
+  database_server:
     build:
-      context: ./dbserver/
+      context: ./database_server/
+      args:
+        - mysql_password=root
+        - mysql_database=magento223
     container_name: mysql
+    volumes:
+      - ./database_server/supervisord.conf:/etc/supervisor/conf.d/supervisord.conf
+      - ./database_server/mysql.sh:/etc/mysql.sh
+      - ./database_server/import.sh:/etc/import.sh
+      - ./database_server/magento223.sql:/etc/magento223.sql
     ports:
       - "3306:3306"
